lwb/LightningWorkbench/lexAPIAccess/objects/Response__e/Response__e.object-meta.xml
<CustomObject>
    <description>A generic API Response Event with only one field: payload</description>
    <label>Response</label>
    <pluralLabel>Responses</pluralLabel>
</CustomObject>