lwb/LightningWorkbench/lexAPIAccess/objects/Response__e/fields/continuedPayload1__c.field-meta.xml
<CustomField>
    <fullName>continuedPayload1__c</fullName>
    <description>continued payload</description>
    <label>Payload Continued 1</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>