lwb/LightningWorkbench/lexAPIAccess/objects/Response__e/fields/continuedPayload2__c.field-meta.xml
<CustomField>
    <fullName>continuedPayload2__c</fullName>
    <description>continued payload</description>
    <label>Payload Continued 2</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>