lwb/LightningWorkbench/lexAPIAccess/objects/Response__e/fields/continuedPayload3__c.field-meta.xml
<CustomField>
    <fullName>continuedPayload3__c</fullName>
    <description>continued payload</description>
    <label>Payload Continued 3</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>