lwb/LightningWorkbench/lexAPIAccess/objects/Response__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Payload, ususally a json</description>
    <label>Payload</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>